# WMS2.0

./: .env.example  .gitignore  Jenkinsfile.example  README.md  main.py  pyproject.toml  run_ai_tests_with_log.py  run_all.cmd  run_all.cmd.md  提示词.md
.qoder/specs/: wms-ai-features-analysis-and-glm-integration.md
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-03-29.md  2026-04-23.md  MEMORY.md
config/: logging.yaml  prod.yaml  test.yaml
docs/: case_template.md  domain_extension.md  integration.md  jenkins.md  project_runtime_logic.md  python_learning_guide.md  quick_start.md  secondary_dev.md
src/ai/: __init__.py  assertion.py  failure_analysis.py  locator.py  models.py  provider.py  report_enricher.py
src/api/: __init__.py  base_client.py  oms_client.py  wms_client.py
src/components/: __init__.py  base_component.py  cascade_filter.py  date_picker.py  dialog.py  download.py  drawer.py  pagination.py  table.py  tree.py  upload.py  virtual_list.py  window_manager.py
src/core/: __init__.py  artifacts.py  browser.py  exceptions.py  logging_utils.py  reporting.py  waiting.py
src/data/: __init__.py  loader.py  shared_store.py
src/domains/: __init__.py
src/flows/: __init__.py  base_flow.py
src/pages/: __init__.py  base_page.py
src/templates/: __init__.py  flow_template.py  page_template.py  test_template.py
src/utils/: __init__.py  fix_garbled_comments.py  run_all_scenarios.py  runtime.py
src/wms_oms_ai_ui_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
(+45 files in other folders)
