# 中文说明：本文件定义项目依赖、打包信息和 pytest 运行配置。
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wms-oms-ai-ui-automation"
version = "0.1.0"
description = "AI-enhanced UI automation framework for WMS and OMS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "allure-pytest>=2.13.5",
  "playwright>=1.52.0",
  "pydantic>=2.8.2",
  "pytest>=8.3.5",
  "pytest-html>=4.1.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "tenacity>=9.0.0",
]

[project.scripts]
run-all-scenarios = "utils.run_all_scenarios:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.11.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
  "e2e: end-to-end UI automation cases",
  "oms: OMS domain test cases",
  "wms: WMS domain test cases",
  "cross_system: Cross-system flow cases",
  "smoke: minimal contract validation cases",
  "ai: AI module tests (may call external API)",
]
